--- a/src/app/components/task-management/task-management.component.html
+++ b/src/app/components/task-management/task-management.component.html
@@ -1,1 +1,6 @@
-<p>task-management works!</p>
+<div class="min-h-screen bg-gray-700 text-white p-6 rounded-4xl">
+    <h1 class="text-2xl font-bold text-center mb-6">Task Management</h1>
+
+    <app-add-task></app-add-task>
+    <app-task-list></app-task-list>
+</div>
