updated with blog

--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,1 +1,7 @@
-<p>blog works!</p>
+<div class="max-w-4xl mx-auto p-6">
+
+    <app-blog-form></app-blog-form>
+
+    <app-blog-list></app-blog-list>
+
+</div>
