--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -1,1 +1,12 @@
-<p>not-found works!</p>
+<div class="flex flex-col items-center justify-center h-96 bg-gray-900 text-white rounded-4xl">
+    <div class="text-center">
+        <h1 class="text-6xl font-bold text-indigo-500">404</h1>
+        <p class="text-xl mt-4">Oops! The page you're looking for doesn't exist.</p>
+        <p class="text-gray-400 mt-2">You might have mistyped the address or the page may have moved.</p>
+
+        <a routerLink="/"
+            class="mt-6 inline-block px-6 py-3 bg-indigo-500 text-white font-semibold rounded-lg shadow-md hover:bg-indigo-600 transition">
+            Go Home
+        </a>
+    </div>
+</div>
