--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="text-gray-400 bg-gray-900 body-font">
+<header class="text-gray-400 bg-gray-900 body-font sticky top-0 z-50">
     <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
         <nav class="flex lg:w-2/5 flex-wrap items-center text-base md:ml-auto">
             <a class="mr-5 hover:text-white" routerLink="" routerLinkActive="text-white"
@@ -16,7 +16,7 @@
             <span class="ml-3 text-xl font-semibold text- xl:block lg:hidden">Multi Language Tool</span>
         </a>
         <div class="lg:w-2/5 inline-flex lg:justify-end ml-5 lg:ml-0">
-            <select class="bg-gray-800 text-white px-4 py-2 rounded-lg border border-gray-600 
+            <select class="bg-gray-800 mt-5 md:mt-0 text-white px-4 py-2 rounded-lg border border-gray-600 
                            focus:ring-2 focus:ring-indigo-400 focus:outline-none transition duration-200 
                            hover:bg-gray-700 cursor-pointer" (change)="switchLanguage($event)" [value]="selectedLang">
                 <option value="en">English</option>
